test/tests/bad/conflicting-type-def.carth
;; ConflictingTypeDef

(data Foo)
(data Foo)
